--- a/src/main/webapp/stylesheetsv3/perfect-scrollbar.css
+++ b/src/main/webapp/stylesheetsv3/perfect-scrollbar.css
@@ -70,5 +70,5 @@
 }
 
 .episode-list.ps-container .ps-scrollbar-y {
-   margin: 45px 0 200px 0;	
+   margin: 50px 0 200px 0;	
 }
